# cookiecutter-py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  README.rst  cookiecutter.json  lamin-project.yaml  noxfile.py  pyproject.toml
.github/workflows/: build.yml  build_template.yml  doc-changes.yml  docs.yml  latest-changes.jinja2  latest-changes.yml  sync.yml  test.yml
cookiecutter_py/: __init__.py
docs/: architecture.md  changelog.md  cli.md  conf.py  console_script_setup.md  faq.md  get-started.md  history.md  index.md  index.rst  make-release.md
docs/_templates/: layout.html
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py  test_base.py
{{cookiecutter.project_slug}}/: CHANGELOG.md  LICENSE
{{cookiecutter.project_slug}}/.github/workflows/: build.yml
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/tests/: test_base.py
{{cookiecutter.repo_slug}}/: .pre-commit-config.yaml  LICENSE  README.md  lamin-project.yaml  noxfile.py  pyproject.toml
{{cookiecutter.repo_slug}}/.github/workflows/: build.yml
{{cookiecutter.repo_slug}}/docs/: api.md  conf.py  index.md
{{cookiecutter.repo_slug}}/docs/guides/: curate-data.ipynb
{{cookiecutter.repo_slug}}/docs/tasks/: index.md
{{cookiecutter.repo_slug}}/tests/: test_base.py
{{cookiecutter.repo_slug}}/{{cookiecutter.pkg_name}}/: __init__.py
{{cookiecutter.repository_name}}/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  lamin-project.yaml  noxfile.py  pyproject.toml
{{cookiecutter.repository_name}}/.github/ISSUE_TEMPLATE/: config.yml
{{cookiecutter.repository_name}}/.github/workflows/: build.yml  latest-changes.yml
{{cookiecutter.repository_name}}/docs/: api.md  changelog.md  index.md  quickstart.ipynb  reference.md
{{cookiecutter.repository_name}}/docs/guide/: quickstart.ipynb
{{cookiecutter.repository_name}}/docs/tutorial/: index.md  quickstart.md
{{cookiecutter.repository_name}}/tests/: test_base.py
{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/: __init__.py
