[tool]
[tool.poetry]
name = "cookiecutter_py"
version = "0.0.0"
description = "Lamin template for Python"
license = "closed source"
authors = ["Lamin Labs"]
readme = "README.rst"
repository = "https://github.com/laminlabs/cookiecutter-py"
documentation = "https://lamin.dev/cookiecutter-py/"
keywords = ['cookiecutter', 'template', 'package']

include = [
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = ">=3.6.*"
cookiecutter = "1.7.2"
pytest = {version = "^6.2.3", optional=true}
pytest-cookies = {version = "^0.6.1", optional=true}
pyyaml = {version="^5.3.1", optional=true}
pytest-cov = {version="^2.10.1", optional=true}
tox = {version = "^3.20.1", optional=true}

[tool.poetry.extras]
dev = [
  "pytest",
  "pytest-cookies",
  "pyyaml",
  "pytest-cov",
  "tox",
  "sphinx",
  "sphinx-book-theme",
  "sphinx_autodoc_typehints",
  "myst_nb",
  "nbproject"
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
